--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "prettier": "2.3.2",
     "typescript": "~4.1.5"
   },
   "browserslist": [
