--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vuex-orm/core": "^0.36.4",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
   },
