--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vuex-orm/core": "^0.36.4",
+    "tslib": "^2.3.0",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
   },
